# SCP-Story

./: .gitignore  AGENTS.md  README.md  pyproject.toml  request.md
config/: featured-scp.yaml  series-1.yaml  series-2.yaml  series-3.yaml  series-4.yaml  series-5.yaml  series-6.yaml  series-7.yaml  series-8.yaml
docs/superpowers/plans/: 2026-07-09-scp-series-1-epub-pipeline.md  2026-07-13-include-scp001-proposals.md  2026-07-17-kindle-scribe-output.md  2026-07-20-featured-page-fallback-translations.md  2026-07-20-rocky-9-adaptation.md  2026-07-21-classification-component-fidelity.md  2026-07-23-featured-light-text-readability.md  2026-07-23-style-processing-performance.md
docs/superpowers/specs/: 2026-07-09-scp-series-1-epub-pipeline-design.md  (+10 more)
scripts/: setup-rocky.sh
src/scp_epub/: appendix.py  assets.py  cache.py  classification.py  cli.py  config.py  epub.py  fetcher.py  indexer.py  inline_documents.py  kindle.py  linked_appendices.py  manifest.py  models.py  page_fallbacks.py  pipeline.py  transform.py  urls.py
tests/: conftest.py  test_appendix.py  test_assets.py  test_classification.py  test_cli.py  test_config.py  test_epub.py  test_fetcher.py  test_indexer.py  test_kindle.py  test_linked_appendices.py  test_manifest.py  test_page_fallbacks.py  test_pipeline.py  test_scp001.py  test_transform.py  test_urls_cache.py
tests/fixtures/: index_sample.html  page_sample.html  scp001_sample.html  series_index_sample.html
translations/featured/: scp-4846.zh-CN.html  scp-7875.zh-CN.html  scp-8274.zh-CN.html  scp-8304.zh-CN.html  yamizushi-file-no233.zh-CN.html
(+4 files in other folders)
