[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scp-story-epub"
version = "0.1.0"
description = "Build SCP Wiki Tales Edition EPUB volumes."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "ebooklib>=0.18",
  "httpx>=0.27",
  "lxml>=5.2",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.44"]
dev = ["pytest>=8.2"]

[project.scripts]
scp-epub = "scp_epub.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scp_epub = ["styles/*.css"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
